--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tauri + React + TS</title>
+
+    <script>
+      // safety practices
+      document.addEventListener("contextmenu", (e) => {
+        e.preventDefault();
+      });
+      document.addEventListener("keydown", (e) => {
+        if (
+          e.key === "F12" ||
+          (e.key === "R" && e.ctrlKey) ||
+          (e.key === "I" && e.ctrlKey) ||
+          (e.key === "r" && e.ctrlKey)
+        ) {
+          e.preventDefault();
+
+          return false;
+        }
+      });
+    </script>
   </head>
 
   <body>
